traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:10: error: type mismatch;
 found   : Unit
 required: Boolean
    if (versLeBord){
        ^TraversalDiagonal:22: warning: enclosing method versLeBord has result type Unit: return value discarded
  return(getY == 0)||(getX == getMondeLargeur-1)
  ^