traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  var max = (getMondeHauteur*getMondeLargeur) - 1;
  var cpt = 0;
  var lastX = 0;
  
  while(cpt < max){
    ecritMessage(cpt);
    cpt += 1;
    
    if (versLeBord){
      setPos(lastX, diag);
      diag += 1;
      if(getY == getMondeHauteur-1) 	setPos(getX + 1, getY);
      else 														setPos(getX, getY + 1);
    }
    else setPos(getX+1, getY-1);
  }
  ecritMessage(cpt)
}

def versLeBord(){
  return(getY == 0)||(getX == getMondeLargeur-1)
}